force-app/main/default/objects/GFB_MMC_Service_Quality_Survey__c/fields/Age_of_record__c.field-meta.xml
<CustomField>
    <fullName>Age_of_record__c</fullName>
    <formula>IF(Negative_Survey__c = true, IF(ISBLANK(Action_Taken_Time__c ),  NOW() - CreatedDate,  Action_Taken_Time__c -  CreatedDate),null)</formula>
    <inlineHelpText>Days</inlineHelpText>
    <label>Age of record</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>