force-app/main/default/objects/GFB_MMC_Service_Quality_Survey__c/fields/Bringing_Car_Back_To_CNC_For_Same_Reason__c.field-meta.xml
<CustomField>
    <fullName>Bringing_Car_Back_To_CNC_For_Same_Reason__c</fullName>
    <label>Bringing Car Back To CNC For Same Reason</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>