force-app/main/default/objects/GFB_MMC_Service_Quality_Survey__c/fields/Complaint_Category__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Category__c</fullName>
    <label>Complaint Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Aftersales_Survey_Complaint_Category</valueSetName>
    </valueSet>
</CustomField>