force-app/main/default/objects/GFB_MMC_Service_Quality_Survey__c/fields/CSAT_SC__c.field-meta.xml
<CustomField>
    <fullName>CSAT_SC__c</fullName>
    <formula>VALUE( SUBSTITUTE( LEFT(Service_Advisor_Service_Rating__c, 2) , &quot; &quot;, &quot;&quot; ) )/2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSAT SA (1-5)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>