force-app/main/default/objects/GFB_MMC_Service_Quality_Survey__c/fields/CSAT_Service_Experience__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Service_Experience__c</fullName>
    <formula>VALUE( SUBSTITUTE( LEFT(Overall_Satisfaction_with_Car__c, 2) , &quot; &quot;, &quot;&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSAT Service Experience (1-10)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>