force-app/main/default/objects/GFB_MMC_Service_Quality_Survey__c/fields/How_Many_Time_Bringing_Car_Back_To_CNC__c.field-meta.xml
<CustomField>
    <fullName>How_Many_Time_Bringing_Car_Back_To_CNC__c</fullName>
    <label>How Many Time Bringing Car Back To CNC</label>
    <length>200</length>
    <type>Text</type>
</CustomField>