force-app/main/default/objects/GFB_MMC_Service_Quality_Survey__c/fields/Issues_with_Car__c.field-meta.xml
<CustomField>
    <fullName>Issues_with_Car__c</fullName>
    <label>Issues with Car</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>