force-app/main/default/objects/GFB_MMC_Service_Quality_Survey__c/fields/Likeliness_to_Recommend_CNC__c.field-meta.xml
<CustomField>
    <fullName>Likeliness_to_Recommend_CNC__c</fullName>
    <label>Likeliness to Recommend CNC</label>
    <length>200</length>
    <type>Text</type>
</CustomField>