force-app/main/default/objects/GFB_MMC_Service_Quality_Survey__c/fields/Post_Service_Header__c.field-meta.xml
<CustomField>
    <fullName>Post_Service_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Post Service Header</label>
    <referenceTo>Post_Service_Header__c</referenceTo>
    <relationshipLabel>GFB MMC Service Quality Surveys</relationshipLabel>
    <relationshipName>GFB_MMC_Service_Quality_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>