force-app/main/default/objects/GFB_MMC_Service_Quality_Survey__c/fields/Reasonable_Time_of_Service_Work__c.field-meta.xml
<CustomField>
    <fullName>Reasonable_Time_of_Service_Work__c</fullName>
    <label>Reasonable Time of Service/Work</label>
    <length>200</length>
    <type>Text</type>
</CustomField>